# life_simulator

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
life_simulator/: Cargo.toml
src/: lib.rs  main.rs
src/application/: mod.rs
src/cli/: cli.rs  mod.rs
src/desktop/ui/: app.rs  mod.rs
src/desktop/ui/components/: analytics_component.rs  expenses_component.rs  incomes_component.rs  mod.rs  settings_component.rs  setup_component.rs  shared_state.rs  simulation_component.rs
src/domain/entities/: expense.rs  mod.rs  person.rs
src/domain/services/: life_simulator.rs  mod.rs
